[package]
name = "audibooks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap ={version= "3.2.16",features = ["derive"]}
thiserror = "1.0.30"
async-trait = "0.1.57"
tokio = { version = "1.20.1", features = ["full"] }
reqwest ={version= "0.11.11",features=["rustls-tls"],default-features=false}
scraper = "0.13.0"
selectors = "0.23.0"
json = "0.12.4"
regex = "1.6.0"