[package]
name = "audibooks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap ={version= "3.2.16",features = ["derive"]}
thiserror = "1.0.30"
async-trait = "0.1.57"
tokio = { version = "1.20.1", features = ["full"] }
# must write in this format,or it will compile crash on native android termux or corss compile
# on ubuntu,even with built openssl provided via env vars
reqwest ={version= "0.11.11",features=["rustls-tls","stream"],default-features=false}
scraper = "0.13.0"
selectors = "0.23.0"
json = "0.12.4"
regex = "1.6.0"
serde = {version="1.0.144", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.17"
futures-util = "0.3.17"
indicatif = "0.17.0"